--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div class="container nav-container">
       <h1 class="logo-heading">Fun Bus</h1>
       <nav class="nav">
-        <a class="nav-link" href="#">Home</a>
-        <a class="nav-link" href="#">About Us</a>
-        <a class="nav-link" href="#">Blog</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="http://google.com">Home</a>
+        <a class="nav-link" href="http://google.com">About Us</a>
+        <a class="nav-link" href="http://google.com">Blog</a>
+        <a class="nav-link" href="http://google.com">Contact</a>
       </nav>
     </div>
   </header>
